v0.6.7
- Enable 'Get More...' installation of widget providers
- Return to using json to enable/disable Kodi debug logging
- Jarvis shortcut changes
- Load skin-playlists from subdirectories
- Cleanup
- Minor fixes

v0.6.6
- Template improvements
- Widget selection improvements
- Custom property selection improvements
- Fix properties being applied to wrong profile
- Just Select Widget method
- [aqab0N] Unicode fix
- Ability to restore deleted shortcut via 308
- Global override adjustments
- Fix clonebackground/clonewidgets; add cloneproperties
- [tomer953] Remove requirement for ::ACTION:: in action override to be the only text in element
- [tomer953] Management dialog - Insert new menu in the current location instead of add them at the end
- [tomer953] RTL Support - reverse string before inserting them to the keyboard dialog as a workaround to a kodi bug.
- Minor bug fixes

v0.6.0
- Version bump for Isengard repo.

v0.5.4
- Rollback for Helix repo - fixes incompatiblitly with some Helix skins.

v0.5.3
- [HitcherUK] Add shutdown timer functions
- Support for conditional group overrides
- [bambi73] Add default thumbnail browse option
- [bambi73] Add support for <propertypattern />
- Templates
- Path property for using shortcut as widgets
- Switch to audio nodes for Isengard
- Change action function
- New widget selection options
- Global overrides
- [roee88] Unicode fixes
- Speed improvements
- Minor bug fixes

v0.4.5
- [marcelveldt] fixed issues with assign thumbnail dialog.

v0.4.4
- [phate89] Use files.getDirectory to list playlists
- Just Select method - option to show 'None'
- New management dialog button 311 - select from defined thumbnails
- Conditions for available widgets and backgrounds
- Ability to check for shortcuts
- Speed improvements loading management dialog
- Fixes
- Updated language files from Transifex (from 8th December 2014)

v0.4.2
- [robweber] Fix for profiles shared via path substitution
- Integration with plugin.program.video.node.editor