@@ -7,9 +7,10 @@ script.skinshortcuts was written with the intention of making user customizable 
 
 #### Version 0.6.7 - git version
 
-- Ability for users to install additional widget providers - [Read More on customising when this is available to users](./resources/docs/advanced/Managing widgets.md##default-widgets-from-skin-helper-service)
+- Ability for users to install additional widget providers - [Read More on customising when this is available to users](./resources/docs/advanced/Managing widgets.md#default-widgets-from-skin-helper-service)
 - Jarvis changes to music shortcuts - Please be aware that the shortcuts used to access various areas of the music library have changed. Skin Shortcuts will do its best to update any actions to the Jarvis version when the menu is built, but if this doesn't work (or if you are using the 'Just Select' method) the user may need to reset the action for these shortcuts.
 - Skin playlists will now additionally be correctly loaded from subdirectories on all platforms
+- Ability to set a fallback value for a custom property, used if the user hasn't selected a vlue - [Read More](./resources/docs/advanced/Custom shortcut properties.md#for-all-shortcuts-without-a-user-set-property)
 
 #### Version 0.6.6 - repo version
 
