@@ -355,9 +355,11 @@ class GUI( xbmcgui.WindowXMLDialog ):
         additionalProperties = item.find( "additional-properties" )
         backgroundName = None
         backgroundPlaylistName = None
+        foundProperties = []
         if additionalProperties is not None:
             listitem.setProperty( "additionalListItemProperties", additionalProperties.text )
             for property in eval( additionalProperties.text ):
+                foundProperties.append( property[ 0 ] )
                 if property[1].startswith("$") and not property[ 1 ].startswith( "$SKIN" ):
                     #Translate some listItem properties if needed so they're displayed correctly in the gui
                     listitem.setProperty(property[0],xbmc.getInfoLabel(property[1]))
@@ -375,6 +377,12 @@ class GUI( xbmcgui.WindowXMLDialog ):
                 listitem.setProperty( "backgroundName", DATA.local( backgroundName )[2].replace( "::PLAYLIST::", backgroundPlaylistName ) )
         else:
             listitem.setProperty( "additionalListItemProperties", "[]" )
+
+        # Add fallback custom property values
+        fallbackProperties = DATA._getCustomPropertyFallbacks( self.group )
+        for key in fallbackProperties:
+            if key not in foundProperties:
+                listitem.setProperty( key.decode( "utf-8" ), DATA.local( fallbackProperties[ key ] )[2] )
                 
         return [ isVisible, listitem ]
 
@@ -897,8 +905,14 @@ class GUI( xbmcgui.WindowXMLDialog ):
             num = listControl.getSelectedPosition()
             orderIndex = int( listControl.getListItem( num ).getProperty( "skinshortcuts-orderindex" ) ) + 1
             
+            # Set default label and action
             listitem = xbmcgui.ListItem( __language__(32013) )
             listitem.setProperty( "Path", 'noop' )
+
+            # Add fallback custom property values
+            fallbackProperties = DATA._getCustomPropertyFallbacks( self.group )
+            for key in fallbackProperties:
+                listitem.setProperty( key.decode( "utf-8" ), DATA.local( fallbackProperties[ key ] )[2] )
             
             # Add new item to both displayed list and list kept in memory
             self.allListItems.insert( orderIndex, listitem )
@@ -1800,6 +1814,7 @@ class GUI( xbmcgui.WindowXMLDialog ):
             listitemCopy.setProperty( "icon", icon )
         
         # If we've haven't been passed an originallistitem, set the following from the listitem we were passed
+        foundProperties = []
         if originallistitem is None:
             listitemCopy.setProperty( "labelID", listitem.getProperty("labelID") )
             if listitem.getProperty( "visible-condition" ):
@@ -1809,6 +1824,7 @@ class GUI( xbmcgui.WindowXMLDialog ):
                 listitemProperties = eval( listitem.getProperty( "additionalListItemProperties" ) )
                 
                 for listitemProperty in listitemProperties:
+                    foundProperties.append( listitemProperty[ 0 ] )
                     listitemCopy.setProperty( listitemProperty[0], DATA.local( listitemProperty[1] )[2] )
         else:
             # Set these from the original item we were passed (this will keep original labelID and additional properties
@@ -1821,7 +1837,14 @@ class GUI( xbmcgui.WindowXMLDialog ):
                 listitemProperties = eval( originallistitem.getProperty( "additionalListItemProperties" ) )
                 
                 for listitemProperty in listitemProperties:
+                    foundProperties.append( listitemProperty[ 0 ] )
                     listitemCopy.setProperty( listitemProperty[0], DATA.local(listitemProperty[1] )[2] )
+
+        # Add fallback custom property values
+        fallbackProperties = DATA._getCustomPropertyFallbacks( self.group )
+        for key in fallbackProperties:
+            if key not in foundProperties:
+                listitemCopy.setProperty( key.decode( "utf-8" ), DATA.local( fallbackProperties[ key ] )[2] )
                 
         return listitemCopy
                 
